--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
         <img id="cover4" class="cover"src="Sprites/cover4.png">
         <div id="title" class="cover">^</div>
         <audio loop id="audio" src="Audio/cover0.mp3 "></audio>
+        <img src="Sprites/Select.png" id="bg">
     </div>
 </html>
